--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@metamask/eth-sig-util": "^6.0.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "ethers": "^6.7.1"
   }
 }
